Update application.properties again

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=ContactBook_API
 # profile activation
-spring.profiles.active= MySQL
+spring.profiles.active=${ENV:MySQL}
 server.port=${PORT:8080}
