--- a/pom.xml
+++ b/pom.xml
@@ -46,15 +46,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		   <!-- MySQL JDBC Driver -->
     <dependency>
         <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
+	<version>8.3.0</version>
         <scope>runtime</scope>
     </dependency>
 		<dependency>
