--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=ContactBook_API
 # profile activation
-spring.profiles.active=${ENV:MySQL}
+spring.profiles.active=${ENV:dev}
 server.port=${PORT:8080}
