--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+    <groupId>org.hibernate.validator</groupId>
+    <artifactId>hibernate-validator</artifactId>
+</dependency>
+
 		   <!-- MySQL JDBC Driver -->
     <dependency>
         <groupId>com.mysql</groupId>
